--- a/WMS/Views/Theme/Default/ProductAllowanceGroups/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowanceGroups/Index.cshtml
@@ -28,18 +28,18 @@
 
 <div class="col-md-12 p-0">
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("TenantWebsites", "Create"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("ProductAllowanceGroups", "Create"))
     {
         @Html.ActionLink("Create New", "Create", new { SiteId = ViewBag.SiteId }, new { @class = "btn btn-primary  " })
     }
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("TenantWebsites", "Edit"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("ProductAllowanceGroups", "Edit"))
     {
         @Html.ActionLink("Update", "Edit", null, new { @class = "btn btn-primary  Caction" })
     }
 
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("TenantWebsites", "Delete"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("ProductAllowanceGroups", "Delete"))
     {
         @Html.ActionLink("Delete", "Delete", null, new { @class = "btn btn-primary  Caction" })
     }
