--- a/WMS/Views/Theme/Default/ProductTags/_ProductTagList.cshtml
+++ b/WMS/Views/Theme/Default/ProductTags/_ProductTagList.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "producttagGrdview";
-        settings.CallbackRouteValues = new { Controller = "ProductTag", Action = "_ProductTagList" };
+        settings.CallbackRouteValues = new { Controller = "ProductTags", Action = "_ProductTagList" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.Settings.ShowHeaderFilterButton = false;
         settings.SettingsPopup.HeaderFilter.Height = 200;
@@ -21,18 +21,27 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
         settings.Columns.Add("TagName");
-        settings.Columns.Add("SortOrder");
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "SortOrder";
+            c.Caption = "Sort Order";
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+
+        });
         settings.Columns.Add(c =>
         {
             c.FieldName = "IconImage";
             c.Caption = "Icon";
+            c.Settings.AllowAutoFilter = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
             c.SetDataItemTemplateContent(m =>
             {
                 var Logo = (string)DataBinder.Eval(m.DataItem, "IconImage");
                 if (!string.IsNullOrEmpty(Logo))
                 {
 
-                    ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:200px'>");
+                    ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:60px;width:60px'>");
                 }
             });
         });
