--- a/WMS/Views/Theme/Default/ProductsWebsitesMaps/_WebsiteProductsList.cshtml
+++ b/WMS/Views/Theme/Default/ProductsWebsitesMaps/_WebsiteProductsList.cshtml
@@ -106,7 +106,7 @@
             c.FieldName = "SortOrder";
             c.Caption = "Sort Order";
             c.ColumnType = MVCxGridViewColumnType.SpinEdit;
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
             c.EditorProperties().SpinEdit(p =>
             {
                 p.MinValue = 0;
