--- a/WMS/Views/Theme/Default/WebsiteContentPages/_WebsiteContentPagesList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/_WebsiteContentPagesList.cshtml
@@ -1,9 +1,11 @@
-﻿@using Ganedata.Core.Entities.Helpers
+﻿@using System.Web.UI.WebControls
+@using Ganedata.Core.Entities.Helpers
+@using Ganedata.Core.Entities.Enums
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "WebSiteNavigationGridView";
-        settings.CallbackRouteValues = new { Controller = "WebsiteContentPages", Action = "_WebsiteContentPagesList",  SiteId= ViewBag.SiteId };
+        settings.CallbackRouteValues = new { Controller = "WebsiteContentPages", Action = "_WebsiteContentPagesList", SiteId = ViewBag.SiteId };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.Settings.ShowHeaderFilterButton = false;
         settings.SettingsPopup.HeaderFilter.Height = 200;
@@ -22,28 +24,49 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
         settings.Columns.Add("TenantWebsites.SiteName").Caption = "Site Name"; ;
         settings.Columns.Add("Title");
-        settings.Columns.Add("MetaTitle").Caption = "Meta Title"; ;
-        settings.Columns.Add("MetaDescription").Caption = "Meta Description";
         settings.Columns.Add("pageUrl");
-        settings.Columns.Add("Type");
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "Type";
+            c.Caption = "Type";
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.ColumnType = MVCxGridViewColumnType.ComboBox;
+            var comboSettings = (ComboBoxProperties)c.PropertiesEdit;
+            comboSettings.DataSource = Enum.GetValues(typeof(ContentType));
+        });
         settings.Columns.Add("ImageAltTag");
+        
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "SortOrder";
+            c.Caption = "Sort Order";
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "IsActive";
+            c.Caption = "Active";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+
+        });
         settings.Columns.Add(c =>
         {
             c.FieldName = "Image";
-
+            c.Settings.AllowAutoFilter = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
             c.SetDataItemTemplateContent(m =>
             {
                 var Logo = (string)DataBinder.Eval(m.DataItem, "Image");
                 if (!string.IsNullOrEmpty(Logo))
                 {
 
-                    ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:200px'>");
+                    ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:120px'>");
                 }
             });
         });
-        settings.Columns.Add("SortOrder").Caption = "Sort Order";
-        settings.Columns.Add("IsActive").Caption = "Active";
-
 
         settings.ClientSideEvents.FocusedRowChanged = "OnGridFocusedRowChanged";
         settings.SettingsPager.PageSizeItemSettings.Visible = true;
