--- a/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/_NavProductList.cshtml
@@ -46,7 +46,8 @@
         settings.Columns.Add(c =>
         {
             c.FieldName = "ProductId";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
             c.EditFormSettings.Visible = DefaultBoolean.True;
             c.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -104,7 +105,7 @@
             c.FieldName = "SortOrder";
             c.Caption = "Sort Order";
             c.ColumnType = MVCxGridViewColumnType.SpinEdit;
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
             c.EditorProperties().SpinEdit(p =>
             {
                 p.MinValue = 0;
