--- a/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
@@ -24,13 +24,28 @@
         settings.Columns.Add("Text");
         settings.Columns.Add("ButtonText");
         settings.Columns.Add("ButtonLinkUrl");
-        settings.Columns.Add("SortOrder");
-        settings.Columns.Add("IsActive").Caption="";
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "SortOrder";
+            c.Caption = "Sort Order";
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
+
+        });
+        settings.Columns.Add(c =>
+        {
+            c.FieldName = "IsActive";
+            c.Caption = "Active";
+            c.ColumnType = MVCxGridViewColumnType.CheckBox;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+
+        });
         settings.Columns.Add("ImageAltTag");
         settings.Columns.Add(c =>
         {
             c.FieldName = "Image";
-
+            c.Settings.AllowAutoFilter = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
             c.SetDataItemTemplateContent(m =>
             {
                 var Logo = (string)DataBinder.Eval(m.DataItem, "Image");
