--- a/WMS/Views/Theme/Default/WebsiteVouchers/Index.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteVouchers/Index.cshtml
@@ -29,18 +29,18 @@
 
 <div class="col-md-12 p-0">
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteShippingRules", "Create"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteVouchers", "Create"))
     {
         @Html.ActionLink("Create New", "Create", new { SiteId = ViewBag.SiteId }, new { @class = "btn btn-primary  " })
     }
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteShippingRules", "Edit"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteVouchers", "Edit"))
     {
         @Html.ActionLink("Update", "Edit", null, new { @class = "btn btn-primary  Caction" })
     }
 
 
-    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteShippingRules", "Delete"))
+    @if (WMS.Helpers.LayoutHelpers.ActivityValidator("WebsiteVouchers", "Delete"))
     {
         @Html.ActionLink("Delete", "Delete", null, new { @class = "btn btn-primary  Caction" })
     }
