modify smart's ToHeaderPartial view Imported from Changeset 2531

--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@using Ganedata.Core.Services
+﻿@using Ganedata.Core.Entities.Domain
 @{
-    var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
+    var siteProperties = ViewBag.TenantWebsite as TenantWebsites;
 }
 <div id="top-header" class="sticky-header">
     <header class="custom-header-container smart-header">
