--- a/WMS/Views/Theme/Default/Products/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Products/Edit.cshtml
@@ -211,6 +211,8 @@
                             @Html.ValidationMessageFor(model => model.DontMonitorStock)
                         </div>
                     </div>
+                </div>
+                <div class="single-check-select">
                     <div class="input-group h-100 justify-content-center align-items-center divchkgrp">
                         @Html.LabelFor(model => model.GroupedProduct, htmlAttributes: new { @class = "col-md-4" })
                         <div class="col-md-8">
@@ -218,38 +220,22 @@
                             @Html.ValidationMessageFor(model => model.GroupedProduct)
                         </div>
                     </div>
-                    <div class="input-group h-100 justify-content-center align-items-center" id="dvgrp">
-                        @Html.LabelFor(model => model.ProductGroup, htmlAttributes: new { @class = "col-md-4 kitlabel" })
-                        <div class="col-md-8">
-                            <div class="col-11 p-0 mt-1 pull-left">
-                                @Html.ListBox("ProductGroupIds", ViewBag.ProductgroupItems as MultiSelectList, new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Product Groups" })
-                            </div>
-                            <div class="col-1 p-0 pull-left">
-                                <input type="button" onclick="ShowProductGroupPopUp();" id="ProdGroupAdd" class="btn btn-primary" value="+">
-                            </div>
-                        </div>
-                        @*@Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                @Html.Hidden("ProductKit")*@
 
-
-                    </div>
                     <div class="input-group h-100 justify-content-center align-items-center divchkkit">
                         @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
                         <div class="col-md-8">
                             @Html.CheckBoxFor(m => m.Kit, new { @id = "chkkit", @class = "form-control checkbox" })
                         </div>
                     </div>
-                    <div class="input-group h-100 justify-content-center align-items-center" id="dvkit">
-                        @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
+
+                    <div class="input-group h-100 justify-content-center align-items-center">
+                        @Html.LabelFor(model => model.IsRawMaterial, htmlAttributes: new { @class = "col-md-4" })
                         <div class="col-md-8">
-                            <div class="col-11 p-0 mt-1 pull-left">
-                                @Html.ListBox("ProductKitIds", ViewBag.ProductKitItems as MultiSelectList, new { Multiple = "multiple", size = "5", @class = "chosen-select", data_placeholder = "Choose Product Kit" })
-                            </div>
-                            <div class="col-1 p-0 pull-left">
-                                <input type="button" onclick="ProductKitPopUp();" id="ProdkitAdd" class="btn btn-primary" value="+">
-                            </div>
+                            @Html.EditorFor(model => model.IsRawMaterial)
+                            @Html.ValidationMessageFor(model => model.IsRawMaterial)
                         </div>
                     </div>
+
                 </div>
 
                 <div class="input-group h-100 justify-content-center align-items-center">
@@ -259,14 +245,7 @@
                         @Html.ValidationMessageFor(model => model.IsStockItem)
                     </div>
                 </div>
-
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.IsRawMaterial, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.IsRawMaterial)
-                        @Html.ValidationMessageFor(model => model.IsRawMaterial)
-                    </div>
-                </div>
+                
 
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.LotOption, htmlAttributes: new { @class = "col-md-4" })
@@ -403,7 +382,7 @@
                         @Html.ValidationMessageFor(model => model.ManufacturerPartNo)
                     </div>
                 </div>
-              
+
             </div>
             <div class="col-md-6 pull-left">
 
