--- a/WMS/Views/Theme/Default/Products/_EditableProductGrid.cshtml
+++ b/WMS/Views/Theme/Default/Products/_EditableProductGrid.cshtml
@@ -2,8 +2,8 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "ProductEditListGridView";
-        settings.CallbackRouteValues = new { Controller = "Products", Action = "_EditableProductGrid" };
-        settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Products", Action = "SaveProductEdit" };
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_EditableProductGrid", AssociatedItem = ViewBag.AssociatedItem };
+
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
         settings.SettingsEditing.BatchEditSettings.EditMode = GridViewBatchEditMode.Cell;
@@ -12,17 +12,17 @@
         settings.EnableCallbackAnimation = false;
         settings.CustomBindingRouteValuesCollection.Add(
             GridViewOperationType.Paging,
-            new { Controller = "Products", Action = "_ProductEditListPaging" }
+            new { Controller = "Products", Action = "_ProductEditListPaging", AssociatedItem = ViewBag.AssociatedItem }
         );
 
         settings.CustomBindingRouteValuesCollection.Add(
         GridViewOperationType.Filtering,
-        new { Controller = "Products", Action = "_ProductsEditFiltering" }
+        new { Controller = "Products", Action = "_ProductsEditFiltering", AssociatedItem = ViewBag.AssociatedItem }
         );
 
         settings.CustomBindingRouteValuesCollection.Add(
         GridViewOperationType.Sorting,
-        new { Controller = "Products", Action = "_ProductsEditGetDataSorting" }
+        new { Controller = "Products", Action = "_ProductsEditGetDataSorting", AssociatedItem = ViewBag.AssociatedItem }
         );
 
         settings.Settings.ShowHeaderFilterButton = true;
@@ -41,102 +41,176 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-        settings.Columns.Add(c =>
+        if (ViewBag.AssociatedItem == null)
         {
-            c.FieldName = "Name";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-            c.EditFormSettings.Visible = DefaultBoolean.False;
-            c.EditorProperties().TextBox(p =>
+            settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "Products", Action = "SaveProductEdit" };
+            settings.Columns.Add(c =>
             {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
-            });
-            c.EditFormSettings.Visible = DefaultBoolean.True;
+                c.FieldName = "Name";
+                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                c.EditFormSettings.Visible = DefaultBoolean.False;
+                c.EditorProperties().TextBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
+                c.EditFormSettings.Visible = DefaultBoolean.True;
 
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "SKUCode";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-            c.EditFormSettings.Visible = DefaultBoolean.False;
-            c.EditorProperties().TextBox(p =>
-            {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
-            });
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "Serialisable";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-            c.EditorProperties().CheckBox(p =>
-            {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
-            });
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "ProcessByPallet";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-            c.EditorProperties().CheckBox(p =>
-            {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
             });
 
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "TopProduct";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-            c.EditorProperties().CheckBox(p =>
+            settings.Columns.Add(c =>
             {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                c.FieldName = "SKUCode";
+                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                c.EditFormSettings.Visible = DefaultBoolean.False;
+                c.EditorProperties().TextBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
+                c.EditFormSettings.Visible = DefaultBoolean.True;
             });
-        });
 
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "BestSellerProduct";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditorProperties().CheckBox(p =>
+            settings.Columns.Add(c =>
             {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                c.FieldName = "Serialisable";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
             });
-            c.EditFormSettings.Visible = DefaultBoolean.True;
 
-        });
-
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "SpecialProduct";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditorProperties().CheckBox(p =>
+            settings.Columns.Add(c =>
             {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
-            });
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-        });
+                c.FieldName = "ProcessByPallet";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
 
-        settings.Columns.Add(c =>
-        {
-            c.FieldName = "OnSaleProduct";
-            c.ColumnType = MVCxGridViewColumnType.CheckBox;
-            c.EditorProperties().CheckBox(p =>
+            });
+
+            settings.Columns.Add(c =>
             {
-                p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                c.FieldName = "TopProduct";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
             });
-            c.EditFormSettings.Visible = DefaultBoolean.True;
-        });
 
-        settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginEditGridCallback(s, e); }";
-        settings.ClientSideEvents.FocusedCellChanging = "OnEditGridFocusChanged";
-        settings.ClientSideEvents.EndCallback = "OnEndEditGridCallback";
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "BestSellerProduct";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+
+            });
+
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "SpecialProduct";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "OnSaleProduct";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                });
+                c.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+
+            settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginEditGridCallback(s, e); }";
+            settings.ClientSideEvents.FocusedCellChanging = "OnEditGridFocusChanged";
+            settings.ClientSideEvents.EndCallback = "OnEndEditGridCallback";
+        }
+        else
+        {
+            settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = ViewBag.Controller, Action = "SaveAssociated", AssociatedItem = ViewBag.AssociatedItem };
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "Name";
+                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                c.EditFormSettings.Visible = DefaultBoolean.False;
+            });
+
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "SKUCode";
+                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                c.EditFormSettings.Visible = DefaultBoolean.False;
+            });
+            if ((string)ViewBag.KitTypes != "Grouped")
+            {
+                settings.Columns.Add(c =>
+                {
+                    c.FieldName = "Qty";
+                    c.Caption = "Qty";
+                    c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+                    c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
+                    c.EditorProperties().SpinEdit(p =>
+                    {
+                        p.MinValue = 0;
+                        p.MaxValue = 1000000000;
+                        p.ClientSideEvents.LostFocus = "function(s,e){ OnDetailsChanged(s,e);}";
+                    });
+                });
+            }
+            else
+            {
+                settings.Columns.Add(c =>
+                {
+                    c.FieldName = "ProductKitTypeId";
+                    c.Caption = "Kit Type";
+                    c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                    c.ColumnType = MVCxGridViewColumnType.ComboBox;
+                    var comboSettings = (ComboBoxProperties)c.PropertiesEdit;
+                    comboSettings.ValueField = "Id";
+                    comboSettings.TextField = "Name";
+                    comboSettings.ValueType = typeof(Int32);
+                    comboSettings.DataSource = (ViewBag.GetKitTypes);
+                    c.EditorProperties().ComboBox(p =>
+                    {
+                        p.ClientSideEvents.ValueChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                    });
+
+                });
+            }
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "IsActive";
+                c.Caption = "Active";
+                c.ColumnType = MVCxGridViewColumnType.CheckBox;
+                c.EditorProperties().CheckBox(p =>
+                {
+                    p.ClientSideEvents.ValueChanged = "function(s,e){ OnDetailsChanged(s,e);}";
+                    p.ValidationSettings.Display = Display.Dynamic;
+                    p.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.None;
+                });
+
+            });
+            settings.ClientSideEvents.BeginCallback = "function(s,e){ OnBeginGridCallback(s, e); }";
+            settings.ClientSideEvents.FocusedCellChanging = "OnSpecialPricesGridFocusChanged";
+            settings.ClientSideEvents.EndCallback = "OnEndGridCallback";
+
+        }
 
         settings.SettingsPager.PageSizeItemSettings.Visible = true;
         settings.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
